fixed small overlap error

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,7 @@ body {
     object-fit: contain;
 }
 .back-to-top{
-    transition: all .1s ease-in-out;
+    transition: all .05s ease-in-out;
     bottom: 0;
     right: 0;
     font-size: 35px;
@@ -32,7 +32,7 @@ body {
     z-index: 100;
 }
 .back-to-top:hover{
-    transition: all .1s ease-in-out;
+    transition: all .05s ease-in-out;
     cursor: pointer;
     bottom: 0;
     right: 0;
